--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+    <div>
+        <img src="download (5).jpg" style="float: right; margin-right: 10px;">
+        <p>This is a dog. It's a dachshund</p>
+    </div>
 </body>
 </html>
